--- a/app/src/main/res/menu/activity_config_drawer.xml
+++ b/app/src/main/res/menu/activity_config_drawer.xml
@@ -7,7 +7,7 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="Customers" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_beneficiaries"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Beneficiaries" />
         <item
@@ -15,7 +15,7 @@
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Currencies" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_devices"
             android:icon="@drawable/ic_menu_manage"
             android:title="Devices" />
     </group>
